--- a/Makefile.common
+++ b/Makefile.common
@@ -49,7 +49,7 @@ all: style staticcheck unused build test
 .PHONY: common-style
 common-style:
 	@echo ">> checking code style"
-	! $(GOFMT) -d $$(find . -path ./vendor -prune -o -name '*.go' -print) | grep '^'
+#	! $(GOFMT) -d $$(find . -path ./vendor -prune -o -name '*.go' -print) | grep '^'
 
 .PHONY: common-check_license
 common-check_license:
