--- a/install.template
+++ b/install.template
@@ -44,6 +44,8 @@ fi
 
 upgrade_flag=0
 within_docker=0
+single_mode=0
+enable_all=0
 
 while [[ $# > 1 ]]
 do
@@ -75,6 +77,12 @@ do
       single_mode=1
       shift
       ;;
+
+    --enable-all)
+      enable_all=1
+      shift
+      ;;
+
 
     --log)
       log="$2"
@@ -142,9 +150,10 @@ for as in "${services[@]}"; do
   printf "stopping %s... " $as | tee -a $install_log
 
   # 每种停止方式都试一下(暴力). TODO: 后面可以加入更多的停止方式
-  systemctl stop $as &>/dev/null
-  service $as stop &>/dev/null
-  stop $as &>/dev/null
+  #systemctl stop $as &>/dev/null
+  #service $as stop &>/dev/null
+  #stop $as &>/dev/null
+	ps -ef | pgrep $as | xargs kill &> /dev/null
 
   if ps -ef | pgrep $as; then
     printf 'failed. exiting\n' | tee -a $install_log
@@ -198,12 +207,13 @@ fi
 
 if [ $upgrade_flag -eq 0 ]; then
   printf "init corsair ... " | tee -a ${install_log}
-  if ${binary} -init \
+  if ${binary} --init \
 		--unique-id "${unique_id}" \
 		--instance-id "${instance_id}" \
 		--ak "${ak}" \
 		--sk "${sk}" \
 		--single-mode ${single_mode} \
+		--enable-all ${enable_all} \
     --cfg "${yaml_cfg}" \
     --remote-host "${remote_host}" \
     --host "${corsair_hostname}" \
