--- a/install.template
+++ b/install.template
@@ -13,7 +13,7 @@ service_name="corsair"
 # 安装目录设置
 install_dir=/usr/local/cloudcare
 pid_file="${install_dir}"/"${bin_name}".pid
-yaml_cfg="${install_dir}"/cfg.yaml
+yml_cfg="${install_dir}"/cfg.yml
 binary="${install_dir}"/"${bin_name}"
 log="${install_dir}"/log
 install_log="${install_dir}"/install.log
@@ -46,6 +46,8 @@ upgrade_flag=0
 within_docker=0
 single_mode=0
 enable_all=0
+corsair_hostname="default"
+corsair_port=9100
 
 while [[ $# > 1 ]]
 do
@@ -144,23 +146,9 @@ services=(
 "${service_name}"
 )
 
-for as in "${services[@]}"; do
-  # 各种工具轮番一次
-
-  printf "stopping %s... " $as | tee -a $install_log
-
-  # 每种停止方式都试一下(暴力). TODO: 后面可以加入更多的停止方式
-  #systemctl stop $as &>/dev/null
-  #service $as stop &>/dev/null
-  #stop $as &>/dev/null
-	ps -ef | pgrep $as | xargs kill &> /dev/null
-
-  if ps -ef | pgrep $as; then
-    printf 'failed. exiting\n' | tee -a $install_log
-    exit -1
-  else
-    printf 'ok.\n' | tee -a $install_log
-  fi
+for s in "${services[@]}"; do
+  printf "stopping %s... " ${s} | tee -a $install_log
+	ps -ef | pgrep ${s} | xargs kill &> /dev/null
 done
 
 ########################################################
@@ -207,6 +195,7 @@ fi
 
 if [ $upgrade_flag -eq 0 ]; then
   printf "init corsair ... " | tee -a ${install_log}
+	echo ${binary} --init --unique-id "${unique_id}" --instance-id "${instance_id}" --ak "${ak}" --sk "${sk}" --single-mode ${single_mode} --enable-all ${enable_all} --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${corsair_hostname}" --port "${corsair_port}" | tee -a ${install_log} | tee -a ${install_log}
   if ${binary} --init \
 		--unique-id "${unique_id}" \
 		--instance-id "${instance_id}" \
@@ -214,7 +203,7 @@ if [ $upgrade_flag -eq 0 ]; then
 		--sk "${sk}" \
 		--single-mode ${single_mode} \
 		--enable-all ${enable_all} \
-    --cfg "${yaml_cfg}" \
+    --cfg "${yml_cfg}" \
     --remote-host "${remote_host}" \
     --host "${corsair_hostname}" \
 		--port "${corsair_port}" ; then
@@ -222,6 +211,7 @@ if [ $upgrade_flag -eq 0 ]; then
     printf "ok\n" | tee -a ${install_log}
   else
     printf "failed(see %s for details)\n" "${log}" | tee -a ${install_log}
+		echo ${binary} --init --unique-id "${unique_id}" --instance-id "${instance_id}" --ak "${ak}" --sk "${sk}" --single-mode "${single_mode}" --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${corsair_hostname}" --port "${corsair_port}" | tee -a ${install_log} | tee -a ${install_log}
     exit 1
   fi
 else
@@ -245,6 +235,6 @@ fi
 printf "starting corsair ...\n" | tee -a ${install_log}
 
 # 直接后台运行 corsair
-(${binary} -cfg "${yaml_cfg}" &> log &)
+(${binary} --cfg "${yml_cfg}" &> ${install_dir}/log &)
 
 printf "Success!\n" | tee -a ${install_log}
