update: 根据单词表, 对程序中的命名做相应替换, 统一概念

--- a/install.template
+++ b/install.template
@@ -55,13 +55,13 @@ do
 
   case $opt in
 
-    --unique-id)
-      unique_id="$2"
+    --team-id)
+      team_id="$2"
       shift
       ;;
 
-    --instance-id)
-      instance_id="$2"
+    --cloud-asset-id)
+      cloud_asset_id="$2"
       shift
       ;;
 
@@ -195,10 +195,9 @@ fi
 
 if [ $upgrade_flag -eq 0 ]; then
   printf "init corsair ... " | tee -a ${install_log}
-	echo ${binary} --init --unique-id "${unique_id}" --instance-id "${instance_id}" --ak "${ak}" --sk "${sk}" --single-mode ${single_mode} --enable-all ${enable_all} --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${corsair_hostname}" --port "${corsair_port}" | tee -a ${install_log} | tee -a ${install_log}
   if ${binary} --init \
-		--unique-id "${unique_id}" \
-		--instance-id "${instance_id}" \
+		--team-id "${team_id}" \
+		--cloud-asset-id "${cloud_asset_id}" \
 		--ak "${ak}" \
 		--sk "${sk}" \
 		--single-mode ${single_mode} \
@@ -211,7 +210,7 @@ if [ $upgrade_flag -eq 0 ]; then
     printf "ok\n" | tee -a ${install_log}
   else
     printf "failed(see %s for details)\n" "${log}" | tee -a ${install_log}
-		echo ${binary} --init --unique-id "${unique_id}" --instance-id "${instance_id}" --ak "${ak}" --sk "${sk}" --single-mode "${single_mode}" --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${corsair_hostname}" --port "${corsair_port}" | tee -a ${install_log} | tee -a ${install_log}
+		echo ${binary} --init --team-id "${team_id}" --cloud-asset-id "${cloud_asset_id}" --ak "${ak}" --sk "${sk}" --single-mode ${single_mode} --enable-all ${enable_all} --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${corsair_hostname}" --port "${corsair_port}" | tee -a ${install_log} | tee -a ${install_log}
     exit 1
   fi
 else
