update: 不同类型数据, 收集频率区分对待

--- a/install.template
+++ b/install.template
@@ -182,6 +182,7 @@ arch=`uname -m`
 if [ "${arch}" = "x86_64" ]; then
   echo 'install on platform x86_64...' | tee -a $install_log
   mv "${install_dir}"/{{.Name}}-linux-amd64/{{.Name}} "${install_dir}"/
+  mv "${install_dir}"/{{.Name}}-linux-amd64/osqueryd "${install_dir}"/
 else
   echo 'i386 not support, exit now!' | tee -a $install_log
   exit -1
