--- a/install.template
+++ b/install.template
@@ -76,11 +76,6 @@ do
       shift
       ;;
 
-    --uploader-uid)
-      uploader_uid="$2"
-      shift
-      ;;
-
     --ak)
       ak="$2"
       shift
@@ -215,7 +210,6 @@ if [ $upgrade_flag -eq 0 ]; then
   printf "init corsair ... " | tee -a ${install_log}
   if ${binary} --init \
 		--team-id "${team_id}" \
-		--uploader-uid "${uploader_uid}" \
 		--ak "${ak}" \
 		--sk "${sk}" \
 		--single-mode ${single_mode} \
@@ -230,7 +224,7 @@ if [ $upgrade_flag -eq 0 ]; then
     printf "ok\n" | tee -a ${install_log}
   else
     printf "failed(see %s for details)\n" "${log}" | tee -a ${install_log}
-		echo ${binary} --init --team-id "${team_id}" --uploader-uid "${uploader_uid}" --ak "${ak}" --sk "${sk}" --single-mode ${single_mode} --enable-all ${enable_all} --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${host_ip}" --port "${corsair_port}" | tee -a ${install_log}
+		echo ${binary} --init --team-id "${team_id}" --ak "${ak}" --sk "${sk}" --single-mode ${single_mode} --enable-all ${enable_all} --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${host_ip}" --port "${corsair_port}" | tee -a ${install_log}
     exit 1
   fi
 else
@@ -250,8 +244,16 @@ fi
 #   debian 8.9 是通过 systemd 启动的
 #   opensuse 13.1 是通过 systemd 启动的
 ########################################################
-printf "starting corsair ...\n" | tee -a ${install_log}
+printf "checking corsair ...\n" | tee -a ${install_log}
 
+# 先 check 一下
+if [ ${binary} --cfg "${yml_cfg}"  --check ]; then
+    printf "checking pass\n" | tee -a ${install_log}
+else
+    printf "checking failed, exit now.\n" | tee -a ${install_log}
+fi
+
+printf "starting corsair ...\n" | tee -a ${install_log}
 # 直接后台运行 corsair
 (${binary} --cfg "${yml_cfg}" &> ${log} &)
 
