--- a/install.template
+++ b/install.template
@@ -10,14 +10,16 @@ bin_name="corsair"
 service_name="corsair"
 
 # 安装目录设置
-install_dir=/usr/local/cloudcare
-pid_file="${install_dir}"/"${bin_name}".pid
-yml_cfg="${install_dir}"/corsair.yml
-env_cfg="${install_dir}"/env.json
-binary="${install_dir}"/"${bin_name}"
-log="${install_dir}"/corsair.log
-install_log="${install_dir}"/corsair.install.log
+install_dir="/usr/local/cloudcare/${service_name}"
+pid_file="${install_dir}/${bin_name}".pid
+yml_cfg="${install_dir}/${bin_name}".yml
+binary="${install_dir}/${bin_name}"
+log="${install_dir}/${bin_name}.log"
+install_log="${install_dir}/${bin_name}.install.log"
 provider="aliyun"
+
+env_cfg="${install_dir}"/env.json
+fileinf_cfg="${install_dir}"/fileinfo.json
 
 # 创建安装目录
 if ! mkdir -p "${install_dir}"; then
@@ -31,24 +33,24 @@ printf "===================================\n" | tee -a $install_log
 printf "current newest version: %s\n" "{{.Version}}" | tee -a $install_log
 
 # 检测磁盘空间
-required_size=5000000 #KB in 1000
-cur_size=`df | grep '\/$' | awk '{print $4}'`
+#required_size=5000000 #KB in 1000
+#cur_size=`df | grep '\/$' | awk '{print $4}'`
 
-printf "detecting disk space(%dGB required)... " $((${required_size} / 1000 / 1000)) | tee -a $install_log
+#printf "detecting disk space(%dGB required)... " $((${required_size} / 1000 / 1000)) | tee -a $install_log
 
-if [  ${cur_size}  -lt ${required_size} ]; then
-	printf 'disk size less than %dGB(required), exited now!\n' $((${required_size} / 1000 / 1000)) | tee -a $install_log
-	exit
-else
-	printf 'ok.\n' | tee -a $install_log
-fi
+#if [  ${cur_size}  -lt ${required_size} ]; then
+#	printf 'disk size less than %dGB(required), exited now!\n' $((${required_size} / 1000 / 1000)) | tee -a $install_log
+#	exit
+#else
+#	printf 'ok.\n' | tee -a $install_log
+#fi
 
 upgrade_flag=0
 within_docker=0
 single_mode=1
 enable_all=1
 host_ip="default"
-corsair_port=9100
+port=9100
 
 while [[ $# > 1 ]]
 do
@@ -158,19 +160,27 @@ services=(
 )
 
 for s in "${services[@]}"; do
-  printf "stopping %s... " ${s} | tee -a $install_log
-	ps -ef | pgrep ${s} | xargs kill &> /dev/null
+  printf "stopping %s... ${s}\n" | tee -a $install_log
+
+	service "$s" stop >/dev/null 2>&1
+  systemctl stop "$s" >/dev/null 2>&1
+  initctl stop "$s" >/dev/null 2>&1
+
+  if ps -ef | pgrep "$s"; then
+    printf "stop ${service_name} failed\n" | tee -a "$install_log"
+    exit -1
+  fi
 done
 
 ########################################################
 # 检查这些端口是否被占用
 ########################################################
 
-corsair_ports=(
-$corsair_port
+ports=(
+$port
 )
 
-for ap in "${corsair_ports[@]}"; do
+for ap in "${ports[@]}"; do
   if netstat -tunple | grep -w $ap; then
     printf "port %s been using...\n" $ap | tee -a $install_log
     exit -1
@@ -178,10 +188,10 @@ for ap in "${corsair_ports[@]}"; do
 done
 
 ########################################################
-# 下载最新 corsair 并安装到指定目录
+# 下载最新并安装到指定目录
 ########################################################
 
-printf 'downloading new corsair... ' | tee -a ${install_log}
+printf "downloading new ${service_name}... \n" | tee -a ${install_log}
 wget -O - "${dl_url}" | tar -xz -C ${install_dir}
 if [ $? -ne 0 ]; then
   printf 'failed\n' | tee -a ${install_log}
@@ -190,7 +200,7 @@ else
   printf 'ok\n' | tee -a ${install_log}
 fi
 
-# 根据系统平台选择不同的 corsair 程序
+# 根据系统平台选择不同的程序
 arch=`uname -m`
 if [ "${arch}" = "x86_64" ]; then
   echo 'install on platform x86_64...' | tee -a $install_log
@@ -204,11 +214,11 @@ else
 fi
 
 ########################################################
-# init corsair settings
+# init settings
 ########################################################
 
 if [ $upgrade_flag -eq 0 ]; then
-  printf "init corsair ... " | tee -a ${install_log}
+  printf "init ${service_name} ...\n" | tee -a ${install_log}
   if ${binary} --init \
 		--team-id "${team_id}" \
 		--ak "${ak}" \
@@ -220,18 +230,30 @@ if [ $upgrade_flag -eq 0 ]; then
     --host "${host_ip}" \
 		--env-cfg "${env_cfg}" \
 		--provider "${provider}" \
-		--port "${corsair_port}" ; then
+		--port "${port}" ; then
 
     printf "ok\n" | tee -a ${install_log}
   else
     printf "failed(see %s for details)\n" "${log}" | tee -a ${install_log}
-		echo ${binary} --init --team-id "${team_id}" --ak "${ak}" --sk "${sk}" --single-mode ${single_mode} --enable-all ${enable_all} --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${host_ip}" --port "${corsair_port}" | tee -a ${install_log}
+		echo "${binary}" --init --team-id "${team_id}" --ak "${ak}" --sk "${sk}" --single-mode ${single_mode} --enable-all ${enable_all} --cfg "${yml_cfg}" --remote-host "${remote_host}" --host "${host_ip}" --port "${port}" | tee -a ${install_log}
     exit 1
   fi
 else
-	printf "new corsair download ok\n" | tee -a ${install_log}
+	printf "new ${service_name} download ok\n" | tee -a ${install_log}
 fi
 
+
+printf "checking ${service_name} ...\n" | tee -a ${install_log}
+
+# 先 check 一下
+if `${binary} --cfg "${yml_cfg}"  --check 1`; then
+    printf "checking pass\n" | tee -a ${install_log}
+else
+    printf "checking failed, exit now.\n" | tee -a ${install_log}
+		exit -1
+fi
+
+printf "starting ${service_name} ...\n" | tee -a ${install_log}
 ########################################################
 # start corsair and set to backend
 # 经测试(Sat Nov 11 11:04:22 CST 2017):
@@ -245,18 +267,69 @@ fi
 #   debian 8.9 是通过 systemd 启动的
 #   opensuse 13.1 是通过 systemd 启动的
 ########################################################
-printf "checking corsair ...\n" | tee -a ${install_log}
+if hash systemctl 2>/dev/null; then
 
-# 先 check 一下
-if `${binary} --cfg "${yml_cfg}"  --check 1`; then
-    printf "checking pass\n" | tee -a ${install_log}
+  systemctl stop "${service_name}" > /dev/null 2>&1
+  systemctl disable "${service_name}" > /dev/null 2>&1
+  systemd_path="/lib/systemd"
+  if [ ! -e "${systemd_path}" ];then
+    systemd_path="/etc/systemd"
+  fi 
+
+  if cp "${install_dir}/autostart/auto.service" "${systemd_path}/system/${service_name}.service"; then
+    systemctl enable "${service_name}".service
+    systemctl start "${service_name}".service
+  else
+    printf "failed.\n" | tee -a "${install_log}"
+    exit -1
+  fi
 else
-    printf "checking failed, exit now.\n" | tee -a ${install_log}
-		exit -1
-fi
+  if hash init-checkconf 2>/dev/null; then
+    printf "${service_name} init by new upstart...\n" | tee -a "${install_log}"
 
-printf "starting corsair ...\n" | tee -a ${install_log}
-# 直接后台运行 corsair
-(${binary} --cfg "${yml_cfg}" &> ${log} &)
+    service "${service_name}" stop > /dev/null 2>&1
+
+    if cp "${install_dir}/autostart/auto.conf" "/etc/init/${service_name}.conf" ; then
+      service "${service_name}" start
+    else
+      printf "failed.\n" | tee -a "${install_log}"
+      exit -1
+    fi
+  else
+    if hash initctl 2>/dev/null; then
+
+      printf "${service_name} init by old upstart...\n" | tee -a "${install_log}"
+
+      service "${service_name}" stop > /dev/null 2>&1
+      stop "${service_name}" > /dev/null 2>&1
+
+      if cp "${install_dir}/autostart/auto.conf" "/etc/init/${service_name}.conf" ; then
+        start "${service_name}"
+      else
+        printf "failed.\n" | tee -a "${install_log}"
+        exit -1
+      fi
+    else
+      printf "${service_name} init by init.d...\n" | tee -a "${install_log}"
+
+      service "${service_name}" stop > /dev/null 2>&1
+
+      if cp "${install_dir}/autostart/auto.sh" "/etc/init.d/${service_name}" ; then
+        chmod +x "/etc/init.d/${service_name}"
+
+        if hash update-rc.d 2>/dev/null; then
+          update-rc.d "${service_name}" defaults > /dev/null 2>&1
+        else
+          chkconfig --add "${service_name}" > /dev/null 2>&1
+        fi
+
+        service "${service_name}" start
+      else
+        printf "failed.\n" | tee -a "${install_log}"
+        exit -1
+      fi
+    fi
+  fi
+fi
 
 printf "Success!\n" | tee -a ${install_log}
