--- a/autostart/auto.conf
+++ b/autostart/auto.conf
@@ -7,4 +7,4 @@ export HOME
 respawn
 respawn limit 10 5
 umask 022
-exec /usr/local/cloudcare/corsair/corsair -cfg /usr/local/cloudcare/corsair/corsair.yml
+exec /usr/local/cloudcare/corsair/corsair --cfg /usr/local/cloudcare/corsair/corsair.yml
