--- a/autostart/auto.service
+++ b/autostart/auto.service
@@ -12,7 +12,7 @@ ExecReload=/bin/kill -2 $MAINPID
 KillMode=process
 Restart=always
 RestartSec=3s
-ExecStart=/usr/local/cloudcare/corsair/corsair -cfg /usr/local/cloudcare/corsair/corsair.yml
+ExecStart=/usr/local/cloudcare/corsair/corsair --cfg /usr/local/cloudcare/corsair/corsair.yml
 
 [Install]
 WantedBy=default.target
