--- a/autostart/auto.conf
+++ b/autostart/auto.conf
@@ -1,5 +1,5 @@
 # upstart service settings
-description "cloudcare corsair"
+description "cloudcare profwang_probe"
 start on runlevel [2345]
 stop on runlevel [!2345]
 env HOME=/root
@@ -7,4 +7,4 @@ export HOME
 respawn
 respawn limit 10 5
 umask 022
-exec /usr/local/cloudcare/corsair/corsair --cfg /usr/local/cloudcare/corsair/corsair.yml
+exec /usr/local/cloudcare/profwang/profwang_probe --cfg /usr/local/cloudcare/profwang/profwang_probe.yml
