安装不成功不覆盖uid

--- a/install.template
+++ b/install.template
@@ -193,7 +193,7 @@ if [ "${arch}" = "x86_64" ]; then
   echo 'install on platform x86_64...' | tee -a $install_log
   mv "${install_dir}"/{{.Name}}-linux-amd64/{{.Name}} "${install_dir}"/
   mv "${install_dir}"/{{.Name}}-linux-amd64/osqueryd "${install_dir}"/
-  mv "${install_dir}"/{{.Name}}-linux-amd64/env.json "${install_dir}"/
+  mv "${install_dir}"/{{.Name}}-linux-amd64/kv.json "${install_dir}"/
   mv "${install_dir}"/{{.Name}}-linux-amd64/fileinfo.json "${install_dir}"/
 else
   echo 'i386 not support, exit now!' | tee -a $install_log
