--- a/autostart/auto.conf
+++ b/autostart/auto.conf
@@ -8,3 +8,4 @@ respawn
 respawn limit 10 5
 umask 022
 exec /usr/local/cloudcare/profwang_probe/profwang_probe --cfg /usr/local/cloudcare/profwang_probe/profwang_probe.yml
+post-stop exec sleep 1
