--- a/autostart/auto.conf
+++ b/autostart/auto.conf
@@ -1,5 +1,5 @@
 # upstart service settings
-description "cloudcare profwang_probe"
+description "cloudcare ft_node_exporter"
 start on runlevel [2345]
 stop on runlevel [!2345]
 env HOME=/root
@@ -7,5 +7,5 @@ export HOME
 respawn
 respawn limit 10 5
 umask 022
-exec /usr/local/cloudcare/profwang_probe/profwang_probe --cfg /usr/local/cloudcare/profwang_probe/profwang_probe.yml
+exec /usr/local/cloudcare/ft_node_exporter/ft_node_exporter 
 post-stop exec sleep 1
