--- a/install.template
+++ b/install.template
@@ -204,24 +204,24 @@ fi
 # init settings
 ########################################################
 
-if [ $upgrade_flag -eq 0 ]; then
-  printf "init ${service_name} ...\n" | tee -a ${install_log}
-  if ${binary} --init \
-		--enable-all ${enable_all} \
-    --host "${host_ip}" \
-		--env-cfg "${env_cfg}" \
-		--fileinfo-cfg "${fileinfo_cfg}" \
-		--bind-addr "${bind_addr}" ; then
-
-    printf "ok\n" | tee -a ${install_log}
-  else
-    printf "failed(see %s for details)\n" "${log}" | tee -a ${install_log}
-		echo "${binary}" --init --enable-all ${enable_all}  --host "${host_ip}" --bind-addr "${bind_addr}" | tee -a ${install_log}
-    exit 1
-  fi
-else
-	printf "new ${service_name} download ok\n" | tee -a ${install_log}
-fi
+#if [ $upgrade_flag -eq 0 ]; then
+#  printf "init ${service_name} ...\n" | tee -a ${install_log}
+#  if ${binary} --init \
+#		--enable-all ${enable_all} \
+#    --host "${host_ip}" \
+#		--env-cfg "${env_cfg}" \
+#		--fileinfo-cfg "${fileinfo_cfg}" \
+#		--bind-addr "${bind_addr}" &> ${log} & ; then
+#
+#    printf "ok\n" | tee -a ${install_log}
+#  else
+#    printf "failed(see %s for details)\n" "${log}" | tee -a ${install_log}
+#		echo "${binary}" --init --enable-all ${enable_all}  --host "${host_ip}" --bind-addr "${bind_addr}" | tee -a ${install_log}
+#    exit 1
+#  fi
+#else
+#	printf "new ${service_name} download ok\n" | tee -a ${install_log}
+#fi
 
 printf "starting ${service_name} ...\n" | tee -a ${install_log}
 
