--- a/install.template
+++ b/install.template
@@ -212,7 +212,11 @@ printf "starting ${service_name} ...\n" | tee -a ${install_log}
 	--fileinfo-cfg "${fileinfo_cfg}" \
 	--bind-addr "${bind_addr}" &> ${log} &) 
 
-if [ -n "$(ps -ef | pgrep ${service_name})" ]; then
+sleep 1 
+pid=`cat ${pid_file}`
+printf "pid ${pid} \n"
+if ps -p ${pid} > /dev/null
+then
 	echo "success, ${service_name} is running"
 else
 	echo "${service_name} start failed, see ${log} for details."
